@@ -1,9 +1,3 @@
-///usr/bin/env jbang "$0" "$@" ; exit $?
-
-//DEPS io.github.wfouche.tulip:tulip-runtime:2.2.3
-//JAVA 25
-//RUNTIME_OPTIONS -Xmx512m -XX:+UseZGC
-
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import io.github.wfouche.tulip.user.HttpUser;
